--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@sanity/client": "^6.21.3",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
