--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@sanity/client": "^6.21.3",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
+    "@types/firebase": "^3.2.1",
+    "firebase": "^10.13.1",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
     "react": "^18",
