--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^4.4.0",
     "@types/firebase": "^3.2.1",
     "firebase": "^10.13.1",
+    "firebase-admin": "^12.4.0",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
     "react": "^18",
