--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
     "@types/firebase": "^3.2.1",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "swiper": "^11.1.11"
+    "swiper": "^11.1.11",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.16.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "^14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.4"
